# Qrypt-PKCS-11

./: .gitignore  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
.devcontainer/: devcontainer.json
end-to-end-example/: CMakeLists.txt  get_random.cpp
gtests/: BufferTests.cpp  CMakeLists.txt  FinalizeTests.cpp  GenerateRandomTests.cpp  GetFunctionListTests.cpp  GetInfoTests.cpp  InitializeTests.cpp  MockRandomCollector.h  SeedRandomTests.cpp  common.cpp  common.h
gtests/metering-client/lib/: test-httpgetter.h
gtests/metering-client/src/: test-httpgetterimpl.h
inc/: cryptoki.h  pkcs11.h  pkcs11t.h  qryptoki_pkcs11_vendor_defs.h
integration-tests/: CMakeLists.txt  get_random.cpp  run_tests.cpp  run_tests.h
integration-tests/test-sources/: FinalizeTests.cpp  GenerateRandomTests.cpp  GetFunctionListTests.cpp  GetInfoTests.cpp  InitializeTests.cpp  SeedRandomTests.cpp  common.cpp  common.h
pipeline/: azure-pipelines.yml
src/: BaseHSM.cpp  BaseHSM.h  CMakeLists.txt  GlobalData.cpp  GlobalData.h  MeteringClientWrapper.cpp  MeteringClientWrapper.h  RandomBuffer.cpp  RandomBuffer.h  RandomCollector.h  log.cpp  log.h  main.cpp  osmutex.cpp  osmutex.h
src/gtests/: BufferTests.cpp  CMakeLists.txt  GenerateRandomTests.cpp  GetFunctionListTests.cpp  GetInfoTests.cpp  MockRandomCollector.h  SeedRandomTests.cpp  common.cpp  common.h
src/gtests/metering-client/src/: test-accesstoken.cpp
src/lib/: BaseHSM.h  CMakeLists.txt  CurlWrapper.cpp  CurlWrapper.h  GlobalData.cpp  MeteringClientWrapper.cpp  MeteringClientWrapper.h  RandomBuffer.cpp  RandomBuffer.h  RandomCollector.h  log.cpp  log.h  main.cpp  osmutex.cpp
src/lib/metering-client/: AccessToken.cpp  AccessToken.h  CommonUtils.h  HttpRandomGetter.cpp  RandomGetter.cpp
src/metering-client/: HttpRandomGetter.h  HttpRandomGetterImpl.h  ImplPtrTemplate_h.h
